# crehana_tasks

./: .flake8  .gitignore  DECISION_LOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 4ecfa840d983_create_task_list_table.py  7b4b7e47cadc_create_task_and_assigned_task_tables.py  e88636d96de0_create_user_table.py
src/: main.py
src/api/: task_lists_router.py  tasks_router.py  users_router.py
src/application/: auth.py
src/controllers/: task_controller.py  task_lists_controller.py  users_controller.py
src/domain/: db_models.py
src/infrastructure/: graphql_client.py
src/services/: task_graphql.py  task_list_graphql.py  user_graphql.py
tests/: conftest.py  test_task_lists_router.py  test_task_router.py  test_users_router.py
